<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8EAF6"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".IssueDetailActivity"
    tools:showIn="@layout/issue_detaillist_layout">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/pickMenuImg"
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="3dp"
                        android:src="@drawable/ic_menu_pick" />

                    <TextView
                        android:id="@+id/textPick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="3dp"
                        android:text="@string/txtPick"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/prodPickMenuImg"
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="3dp"
                        android:src="@drawable/ic_menu_prodpick" />

                    <TextView
                        android:id="@+id/textProdPick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="3dp"
                        android:text="@string/txtProdPick"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/issueMenuImg"
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="3dp"
                        android:src="@drawable/ic_menu_issue" />

                    <TextView
                        android:id="@+id/textIssue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="3dp"
                        android:text="@string/txtIssue"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/issueSaleMenuImg"
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="3dp"
                        android:src="@drawable/ic_menu_issuesale" />

                    <TextView
                        android:id="@+id/textIssueSale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="3dp"
                        android:text="@string/txtIssueSale"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/checkMenuImg"
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="3dp"
                        android:src="@drawable/ic_menu_check" />

                    <TextView
                        android:id="@+id/textCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="3dp"
                        android:text="@string/txtCheck"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/transMenuImg"
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="3dp"
                        android:src="@drawable/ic_menu_trans" />

                    <TextView
                        android:id="@+id/textTransfer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="3dp"
                        android:text="@string/txtTransfer"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/searchMenuImg"
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="3dp"
                        android:src="@drawable/ic_menu_search" />

                    <TextView
                        android:id="@+id/textSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="3dp"
                        android:text="@string/txtSearch"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/progress"
        android:visibility="gone">
    </ProgressBar>

</RelativeLayout>
